# blackpill-zephyr-base-project

./: CMakeLists.txt  prj.conf
boards/: blackpill_f411ce.overlay
src/: main.c
